# argparse-help-i18n

./: .gitignore  README.md  pyproject.toml
argparse_help_i18n/: __init__.py
argparse_help_i18n/locale/: argparse-help.pot
argparse_help_i18n/locale/ar_SA/LC_MESSAGES/: argparse-help.mo  argparse-help.po
argparse_help_i18n/locale/en_US/LC_MESSAGES/: argparse-help.mo  argparse-help.po
argparse_help_i18n/locale/es_ES/LC_MESSAGES/: argparse-help.mo  argparse-help.po
argparse_help_i18n/locale/fr_FR/LC_MESSAGES/: argparse-help.mo  argparse-help.po
argparse_help_i18n/locale/it_IT/LC_MESSAGES/: argparse-help.mo  argparse-help.po
argparse_help_i18n/locale/ru_RU/LC_MESSAGES/: argparse-help.mo  argparse-help.po
argparse_help_i18n/locale/zh_CN/LC_MESSAGES/: argparse-help.mo  argparse-help.po
